# moto-guard

./: .dev_env  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
backend/moto_guard/: settings.py
backend/src/: api_urls.py  asgi.py  mongo.py  settings.py  urls.py  wsgi.py
backend/src/apps/motorcycle/: apps.py  models.py  mongo_models.py  serializers.py  urls.py  views.py
backend/src/apps/motorcycle/migrations/: 0001_initial.py
backend/src/apps/motorcycle/tests/: factories.py  mongo_factories.py  test_mongo_factories.py  test_mongo_motorcycle_details.py  test_motorcycle_brand_viewset.py  test_motorcycle_mongo_viewset.py  test_motorcycle_viewset.py
backend/src/mongodb/: mongo.py  utils.py
backend/src/settings/: __init__.py
backend/src/settings/components/: base.py  database.py  loggers.py
backend/src/settings/environments/: development.py  local_override.py
nginx/local/: nginx_local.conf
