[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dawid <rygula.dawid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.2"
black = "^23.12.0"
psycopg2 = "^2.9.9"
djangorestframework = "~3.14"
    
[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
line-length = 88
target = "src"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
